what is going on

--- a/ideas.org
+++ b/ideas.org
@@ -87,6 +87,7 @@
                   break
           }
 
+emac macro for correct line length: F3 C+U 42 <Right arrow> F4
 * dialouge
 ** for tutorial and backstory
 You wake up. As you blink the blurriness away, you notice that you - pretty obviously - aren't standing behind your
@@ -158,3 +159,39 @@ vocal cords) as several cracks open in the ground. A few tomatoes drop off of th
 sizzles and somewhat dissolves under their splattering juice as the tomatoes start hopping towards you. Like a pack
 of kangaroos, or something.
 
+Talcum the Coworker: Oh hey you're back.
+
+[name]: ...
+
+[name]: talctalctalcithinkijustsawthedevil
+andalsoicandofiremagicnow
+
+Talcum: Oh ok. Anyways, there was this one
+dude that came in, looked like a bibically
+accurate angel? Interlocking gold wheels
+with infinite eyes, floating because we
+don't care about gravity I guess. Right?
+
+So it came in through the front door - you
+would've thought it would've busted through
+the ceiling or something, that was kinda
+anticlimatic - and it started screeching
+something about a test and Chosen One and
+fire and my ears are still ringing and it
+zapped those tomato plants over there and
+I think they're evil now.
+
+I think you're
+supposed to kill it? Yeah good luck with
+that, my shift is over, this isn't my
+problem anymore bye.
+
+As Talcum walks out the door, the writhing
+mass of vines and tomatoes lets out a roar
+(from where? tomatoes don't have vocal cords)
+as several cracks open in the ground.
+A few tomatoes drop off of the main vine
+in the center. The flooring sizzles and
+somewhat dissolves under their splattering
+juice as the tomatoes start hopping towards
+you. Like a pack of kangaroos, or something.
